update language templates + new uploader page

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -1,20 +1,9 @@
 {
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\English",
 
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
-
-	"No reset data.": "No reset data.",
-
-	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
-	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
-
-	"Subscribe": "Subscribe",
-	"Unsubscribe": "Unsubscribe",
-
 	"No POST data.": "No POST data.",
 
-	"do not reset": "do not reset",
-	"Passwords aren't identical.": "Passwords aren't identical.",
+	"The music you were looking for cannot be found.": "The music you were looking for cannot be found.",
 
 	"Please enter your username! ": "Please enter your username! ",
 	"Please enter your password! ": "Please enter your password! ",
@@ -30,62 +19,66 @@
 	"Email isn't valid.": "Email isn't valid.",
 	"Incorrect CAPTCHA. Please try again.": "Incorrect CAPTCHA. Please try again.",
 
+	"No reset data.": "No reset data.",
+
+	"do not reset": "do not reset",
+	"Passwords aren't identical.": "Passwords aren't identical.",
+
+	"Subscribe": "Subscribe",
+	"Unsubscribe": "Unsubscribe",
+
+	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
+
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
+
+	"This feature is not ready for production.": "This feature is not ready for production.",
 	"Access Denied": "Access Denied",
 
+	"About": "About",
+	"About squareBracket": "About squareBracket",
+	"Gamerappa squareBracket": "Gamerappa squareBracket",
+	"Version 2.0 (Build 47101)": "Version 2.0 (Build 47101)",
+	"By squareBracket contributors": "By squareBracket contributors",
+	"The squareBracket website is open source on GitHub.": "The squareBracket website is open source on GitHub.",
+
+	"Admin": "Admin",
+	"All videos": "All videos",
+	"Approved videos": "Approved videos",
+
 	"Browse": "Browse",
+	"Videos from subscriptions": "Videos from subscriptions",
+	"Videos": "Videos",
+	"Your subscriptions haven't uploaded videos yet.": "Your subscriptions haven't uploaded videos yet.",
+	"No uploaded videos.": "No uploaded videos.",
+
 	"Channels": "Channels",
 	"No users.": "No users.",
 
-	"Settings": "Settings",
-	"Account": "Account",
-	"Security": "Security",
-	"Profile": "Profile",
-	"Checkmark": "Checkmark",
-	"Username:": "Username:",
-	"Account migrated from PokTube": "Account migrated from PokTube",
-	"Email address:": "Email address:",
-	"Profile settings": "Profile settings",
-	"Change the look of your channel's profile.": "Change the look of your channel's profile.",
-	"Profile picture": "Profile picture",
-	"Channel background": "Channel background",
-	"(Checkmark only)": "(Checkmark only)",
-	"Channel description": "Channel description",
-	"Description": "Description",
-	"Channel banner color": "Channel banner color",
-	"Update": "Update",
-	"squareBracket Checkmark Program": "squareBracket Checkmark Program",
-	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.",
-	"Apply for Checkmark": "Apply for Checkmark",
-	"Made using Google Forms.": "Made using Google Forms.",
-	"Security options": "Security options",
-	"Change Password": "Change Password",
-	"Current Password": "Current Password",
-	"Password": "Password",
-	"Password (Again)": "Password (Again)",
-	"Change": "Change",
-	"Other": "Other",
-	"Log out from all devices": "Log out from all devices",
-
-	"Checkmarked": "Checkmarked",
-	"Your profile settings were successfully updated.": "Your profile settings were successfully updated.",
-	"Uploaded by %s": "Uploaded by %s",
-	"There are no videos uploaded by %s.": "There are no videos uploaded by %s.",
-	"About %s": "About %s",
-	"Last seen": "Last seen",
-	"Joined": "Joined",
+	"Home": "Home",
+	"From my subscriptions": "From my subscriptions",
+	"Browse subscriptions": "Browse subscriptions",
+	"There are currently no videos from your subscriptions.": "There are currently no videos from your subscriptions.",
+	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
+	"Browse videos": "Browse videos",
 	"s": "s",
-	"Subscriber%s": "Subscriber%s",
-	"Administrator Actions": "Administrator Actions",
-	"Generate password reset for %s": "Generate password reset for %s",
+	"%s subscriber%s": "%s subscriber%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+	"Welcome to squareBracket": "Welcome to squareBracket",
+	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
+	"News and updates": "News and updates",
+	"There are currently no updates.": "There are currently no updates.",
+	"Featured videos": "Featured videos",
+	"No featured videos.": "No featured videos.",
 
-	"Register": "Register",
-	"E-mail": "E-mail",
-	"Display Name": "Display Name",
+	"Login": "Login",
+	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
+	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
 	"Username": "Username",
+	"Password": "Password",
 	"Back": "Back",
-	"You must be 13 years or older to register to squareBracket.": "You must be 13 years or older to register to squareBracket.",
 	"Account passwords are hashed with bcrypt.": "Account passwords are hashed with bcrypt.",
-	"By squareBracket contributors": "By squareBracket contributors",
 
 	"Write a Forum Thread": "Write a Forum Thread",
 	"As you can tell, this page is not complete": "As you can tell, this page is not complete",
@@ -95,53 +88,50 @@
 	"Thread's contents": "Thread's contents",
 	"Post Thread": "Post Thread",
 
-	"Videos from subscriptions": "Videos from subscriptions",
-	"Videos": "Videos",
-	"Your subscriptions haven't uploaded videos yet.": "Your subscriptions haven't uploaded videos yet.",
-	"No uploaded videos.": "No uploaded videos.",
+	"Register": "Register",
+	"E-mail": "E-mail",
+	"Display Name": "Display Name",
+	"Password (Again)": "Password (Again)",
+	"You must be 13 years or older to register to squareBracket.": "You must be 13 years or older to register to squareBracket.",
 
-	"About": "About",
-	"About squareBracket": "About squareBracket",
-	"Gamerappa squareBracket": "Gamerappa squareBracket",
-	"Version 2.0 (Build 47101)": "Version 2.0 (Build 47101)",
-	"The squareBracket website is open source on GitHub.": "The squareBracket website is open source on GitHub.",
+	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
+	"Submit": "Submit",
 
+	"Search Results for %s": "Search Results for %s",
+	"No search results found.": "No search results found.",
+
+	"Settings": "Settings",
+	"Account": "Account",
+	"Profile": "Profile",
+	"Checkmark": "Checkmark",
+	"Account migrated from PokTube": "Account migrated from PokTube",
+	"Email address:": "Email address:",
+	"Security options": "Security options",
+	"Change Password": "Change Password",
+	"Current Password": "Current Password",
+	"Change": "Change",
+	"Other": "Other",
+	"Log out from all devices": "Log out from all devices",
+	"Profile settings": "Profile settings",
 	"Change the look and feel of your channel's page.": "Change the look and feel of your channel's page.",
+	"Profile picture": "Profile picture",
 	"Channel background image": "Channel background image",
+	"(Checkmark only)": "(Checkmark only)",
+	"Channel description": "Channel description",
+	"Description": "Description",
+	"Update": "Update",
+	"squareBracket Checkmark Program": "squareBracket Checkmark Program",
+	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.",
+	"Apply for Checkmark": "Apply for Checkmark",
+	"Made using Google Forms.": "Made using Google Forms.",
 
-	"Search": "Search",
+	"Security": "Security",
+	"Username:": "Username:",
+	"Change the look of your channel's profile.": "Change the look of your channel's profile.",
+	"Channel background": "Channel background",
+	"Channel banner color": "Channel banner color",
+
 	"Upload": "Upload",
-	"Login": "Login",
-	"Change theme": "Change theme",
-	"My profile": "My profile",
-	"Sign off": "Sign off",
-	"Light": "Light",
-	"Dark": "Dark",
-	"Classic Light": "Classic Light",
-	"Classic Dark": "Classic Dark",
-	"Bootstrap": "Bootstrap",
-	"Home": "Home",
-	"By the squareBracket contributors": "By the squareBracket contributors",
-	"Users registered": "Users registered",
-	"Videos uploaded": "Videos uploaded",
-	"Terms": "Terms",
-	"Guidelines": "Guidelines",
-	"Contact": "Contact",
-
-	"Admin": "Admin",
-	"All videos": "All videos",
-	"Approved videos": "Approved videos",
-
-	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
-	"Uploaded on %s": "Uploaded on %s",
-	"view%s": "view%s",
-	"subscriber%s": "subscriber%s",
-	"Edit video": "Edit video",
-	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
-	"Please sign in in order to comment.": "Please sign in in order to comment.",
-	"Comment": "Comment",
-	"Posting...": "Posting...",
-
 	"Upload video": "Upload video",
 	"Important": "Important",
 	"By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.",
@@ -155,38 +145,55 @@
 	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
 	"Upload anyways": "Upload anyways",
 
-	"Search Results for %s": "Search Results for %s",
-	"No search results found.": "No search results found.",
-
+	"Checkmarked": "Checkmarked",
 	"Your profile has been successfully updated.": "Your profile has been successfully updated.",
+	"Uploaded by %s": "Uploaded by %s",
 	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
+	"About %s": "About %s",
+	"Last seen": "Last seen",
+	"Joined": "Joined",
+	"Subscriber%s": "Subscriber%s",
 	"Administrative Actions": "Administrative Actions",
+	"Generate password reset for %s": "Generate password reset for %s",
 
-	"From my subscriptions": "From my subscriptions",
-	"Browse subscriptions": "Browse subscriptions",
-	"There are currently no videos from your subscriptions.": "There are currently no videos from your subscriptions.",
-	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
-	"Browse videos": "Browse videos",
-	"You have %s subscriber%s.": "You have %s subscriber%s.",
-	"no": "no",
-	"You have %s view%s.": "You have %s view%s.",
-	"Your account was made %s.": "Your account was made %s.",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
-	"News and updates": "News and updates",
-	"In memory of Vlare": "In memory of Vlare",
-	"That's right, no more VidLii 2.0 for you.": "That's right, no more VidLii 2.0 for you.",
-	"August 30th 2018 - July 26th 2021": "August 30th 2018 - July 26th 2021",
-	"Gamerappa": "Gamerappa",
-	"Featured videos": "Featured videos",
-	"No featured videos.": "No featured videos.",
-
-	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
-	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
+	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
+	"Uploaded on %s": "Uploaded on %s",
+	"view%s": "view%s",
+	"subscriber%s": "subscriber%s",
+	"Edit video": "Edit video",
+	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
+	"Please sign in in order to comment.": "Please sign in in order to comment.",
+	"Comment": "Comment",
+	"Posting...": "Posting...",
 
 	"Sorry about that.": "Sorry about that.",
 
-	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
-	"Submit": "Submit"
+	"Search": "Search",
+	"Change theme": "Change theme",
+	"My profile": "My profile",
+	"Sign off": "Sign off",
+	"Light": "Light",
+	"Dark": "Dark",
+	"Classic Light": "Classic Light",
+	"Classic Dark": "Classic Dark",
+	"Bootstrap": "Bootstrap",
+	"By the squareBracket contributors": "By the squareBracket contributors",
+	"Users registered": "Users registered",
+	"Videos uploaded": "Videos uploaded",
+	"Terms": "Terms",
+	"Guidelines": "Guidelines",
+	"Contact": "Contact",
+
+	"Video": "Video",
+	"Music": "Music",
+	"Upload music": "Upload music",
+	"Artwork": "Artwork",
+	"Upload artwork": "Upload artwork",
+
+	"Your profile settings have been successfully updated.": "Your profile settings have been successfully updated.",
+
+	"Published on %s": "Published on %s",
+
+	"views": "views"
 
 }
