--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -24,8 +24,8 @@
 	" The new passwords aren't identical.": " The new passwords aren't identical.",
 	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Subscribe": "Subscribe",
-	"Unsubscribe": "Unsubscribe",
+	"Follow": "Follow",
+	"Unfollow": "Unfollow",
 
 	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
 	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
@@ -38,186 +38,68 @@
 	"This feature is not ready for production.": "This feature is not ready for production.",
 	"Access Denied": "Access Denied",
 
-	"Videos": "Videos",
-	"Likes": "Likes",
-	"History": "History",
-	"Watch Later": "Watch Later",
-	"Spotlight": "Spotlight",
-	"No featured videos.": "No featured videos.",
-	"We were unable to complete the request, please try again later.": "We were unable to complete the request, please try again later.",
-	"Loading...": "Loading...",
-
-	"Sign up for a new squareBracket account": "Sign up for a new squareBracket account",
-	"Sign in": "Sign in",
-	"squareBracket Username": "squareBracket Username",
-	"Password": "Password",
-	"squareBracket": "squareBracket",
-	"Sign in to squareBracket with your squareBracket account": "Sign in to squareBracket with your squareBracket account",
-	"Sign in to squareBracket": "Sign in to squareBracket",
-	"Get full access to squareBracket with your account:": "Get full access to squareBracket with your account:",
-	"Upload and share your own videos": "Upload and share your own videos",
-	"Comment on and rate your favorite videos": "Comment on and rate your favorite videos",
-	"By squareBracket contributors": "By squareBracket contributors",
-
-	"About": "About",
-	"About squareBracket": "About squareBracket",
-	"Gamerappa squareBracket": "Gamerappa squareBracket",
-	"Version 2.0 (Build 47101)": "Version 2.0 (Build 47101)",
-	"The squareBracket website is open source on GitHub.": "The squareBracket website is open source on GitHub.",
-
-	"Admin": "Admin",
-	"All videos": "All videos",
-	"Approved videos": "Approved videos",
-
-	"Browse": "Browse",
-	"Videos from subscriptions": "Videos from subscriptions",
-	"Your subscriptions haven't uploaded videos yet.": "Your subscriptions haven't uploaded videos yet.",
-	"No uploaded videos.": "No uploaded videos.",
-
-	"Channels": "Channels",
-	"No users.": "No users.",
-
-	"Home": "Home",
-	"From my subscriptions": "From my subscriptions",
-	"Browse subscriptions": "Browse subscriptions",
-	"There are currently no videos from your subscriptions.": "There are currently no videos from your subscriptions.",
-	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
-	"Browse videos": "Browse videos",
 	"s": "s",
-	"%s subscriber%s": "%s subscriber%s",
+	"%s follower%s": "%s follower%s",
 	"no": "no",
 	"%s view%s": "%s view%s",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
-	"News and updates": "News and updates",
-	"There are currently no updates.": "There are currently no updates.",
-	"Featured videos": "Featured videos",
+	"No uploaded videos.": "No uploaded videos.",
 
-	"Login": "Login",
+	"Sign in": "Sign in",
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
 	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
-	"Username": "Username",
-	"Back": "Back",
-	"Account passwords are hashed with bcrypt.": "Account passwords are hashed with bcrypt.",
 
 	"Register": "Register",
-	"E-mail": "E-mail",
-	"Display Name": "Display Name",
-	"Password (Again)": "Password (Again)",
-	"You must be 13 years or older to register to squareBracket.": "You must be 13 years or older to register to squareBracket.",
 
-	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
-	"Submit": "Submit",
-
-	"Search Results for %s": "Search Results for %s",
-	"No search results found.": "No search results found.",
-
-	"Settings": "Settings",
-	"Account": "Account",
-	"Profile": "Profile",
-	"Checkmark": "Checkmark",
 	"Account migrated from PokTube": "Account migrated from PokTube",
-	"Email address:": "Email address:",
-	"Security options": "Security options",
-	"Change Password": "Change Password",
-	"Current Password": "Current Password",
-	"Change": "Change",
-	"Other": "Other",
-	"Log out from all devices": "Log out from all devices",
-	"Profile settings": "Profile settings",
-	"Change the look and feel of your channel's page.": "Change the look and feel of your channel's page.",
-	"Profile picture": "Profile picture",
-	"Channel background image": "Channel background image",
-	"(Checkmark only)": "(Checkmark only)",
-	"Channel description": "Channel description",
-	"Description": "Description",
-	"Update": "Update",
-	"squareBracket Checkmark Program": "squareBracket Checkmark Program",
-	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.",
-	"Apply for Checkmark": "Apply for Checkmark",
-	"Made using Google Forms.": "Made using Google Forms.",
-
-	"Security": "Security",
-	"Username:": "Username:",
-	"Change the look of your channel's profile.": "Change the look of your channel's profile.",
-	"Channel background": "Channel background",
-	"Channel banner color": "Channel banner color",
 
 	"Upload": "Upload",
 	"Upload video": "Upload video",
-	"Important": "Important",
-	"By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.",
 	"Video info": "Video info",
 	"Enter the title and description of your video.": "Enter the title and description of your video.",
-	"Title": "Title",
-	"Tags": "Tags",
+	" Title": " Title",
+	" Description": " Description",
+	" Tags": " Tags",
 	"Video file": "Video file",
 	"Select the video file you want to upload.": "Select the video file you want to upload.",
+	"Upload guidelines": "Upload guidelines",
+	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
+
+	"Upload music": "Upload music",
+	"Important": "Important",
+	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
+	"Music info": "Music info",
+	"Enter the title of your music.": "Enter the title of your music.",
+	"Title": "Title",
+	"Music file": "Music file",
+	"Select the music file you want to upload.": "Select the music file you want to upload.",
 	"Upload Guidelines": "Upload Guidelines",
 	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
 	"Upload anyways": "Upload anyways",
 
-	"Checkmarked": "Checkmarked",
-	"Your profile has been successfully updated.": "Your profile has been successfully updated.",
-	"Uploaded by %s": "Uploaded by %s",
+	"Video": "Video",
+	"Music": "Music",
+
+	"Not implemented": "Not implemented",
 	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
-	"About %s": "About %s",
-	"Last seen": "Last seen",
-	"Joined": "Joined",
-	"Subscriber%s": "Subscriber%s",
-	"Administrative Actions": "Administrative Actions",
-	"Generate password reset for %s": "Generate password reset for %s",
 
 	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
-	"Uploaded on %s": "Uploaded on %s",
-	"view%s": "view%s",
-	"subscriber%s": "subscriber%s",
 	"Edit video": "Edit video",
+	"Published on %s": "Published on %s",
+	"Category:": "Category:",
+	"License:": "License:",
+	"Standard squareBracket License": "Standard squareBracket License",
 	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
 	"Please sign in in order to comment.": "Please sign in in order to comment.",
 	"Comment": "Comment",
-	"Posting...": "Posting...",
+	"Explore More Videos": "Explore More Videos",
 
 	"Sorry about that.": "Sorry about that.",
 
-	"Search": "Search",
-	"Change theme": "Change theme",
-	"My profile": "My profile",
-	"Sign off": "Sign off",
-	"Light": "Light",
-	"Dark": "Dark",
-	"Classic Light": "Classic Light",
-	"Classic Dark": "Classic Dark",
-	"Bootstrap": "Bootstrap",
 	"By the squareBracket contributors": "By the squareBracket contributors",
 	"Users registered": "Users registered",
 	"Videos uploaded": "Videos uploaded",
 
-	"%s follower%s": "%s follower%s",
-
-	"Upload music": "Upload music",
-	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
-	"Music info": "Music info",
-	"Enter the title of your music.": "Enter the title of your music.",
-	"Music file": "Music file",
-	"Select the music file you want to upload.": "Select the music file you want to upload.",
-
-	"Video": "Video",
-	"Music": "Music",
-	"Artwork": "Artwork",
-	"Upload artwork": "Upload artwork",
-
-	"Your profile settings have been successfully updated.": "Your profile settings have been successfully updated.",
-	"Generate password reset": "Generate password reset",
-
-	"Not implemented": "Not implemented",
-
-	"About This Video": "About This Video",
-	"Published: %s": "Published: %s",
-	"Uploader:": "Uploader:",
-	"Category:": "Category:",
-	"Description:": "Description:",
-	"Explore More Videos": "Explore More Videos",
+	"view%s": "view%s",
 
 	"views": "views"
 
